--- a/SQLiteEx/SQLiteEx.UWP/project.json
+++ b/SQLiteEx/SQLiteEx.UWP/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Xamarin.Forms": "2.0.0.6482"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "SQLite.Net-PCL": "3.1.1",
+    "Xamarin.Forms": "2.2.0.31"
   },
   "frameworks": {
     "uap10.0": {}
