--- a/SQLiteEx/SQLiteEx.Droid/packages.config
+++ b/SQLiteEx/SQLiteEx.Droid/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="monoandroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="monoandroid60" />
+  <package id="Syncfusion.Xamarin.SfDataGrid" version="15.1.0.37" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
@@ -10,5 +11,5 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="monoandroid60" />
 </packages>
