--- a/SQLiteEx/SQLiteEx.iOS/packages.config
+++ b/SQLiteEx/SQLiteEx.iOS/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfDataGrid" version="15.1.0.37" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="xamarinios10" />
 </packages>
